php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #30928 When Using WSDL, SoapServer doesn't handle private or protected properties
Submitted: 2004-11-29 05:45 UTC Modified: 2004-12-07 18:30 UTC
From: david at giffin dot org Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5CVS-2004-11-29 (dev) OS: Linux
Private report: No CVE-ID: None
 [2004-11-29 05:45 UTC] david at giffin dot org
Description:
------------
When using WSDL with a complex type definition the SoapServer doesn't handle static, private or protected properties correctly. SoapServer returns a SoapFault: "SOAP-ERROR: Encoding: object hasn't 'xxxx' property." Where 'xxxx' is the property defined as static, private or protected.

FYI: This bug is similar to Bug #30799. Bug #30799 is fixed when returning a user defined object, which is not defined in the WSDL.

Reproduce code:
---------------
I can post some code if you need it. It would be too much code for this form.

Expected result:
----------------
The SoapServer would return the data present in the static, private or protected property if it is defined as an element for the complexType defined in the WSDL.

Actual result:
--------------
The SoapServer returns a SoapFault: "SOAP-ERROR: Encoding: object hasn't 'xxxx' property."

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-12-07 18:30 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_0.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 29 13:00:02 2026 UTC