Fixed bug #30928 (When Using WSDL, SoapServer doesn't handle private or protected properties)